tests/demo/demo.exp
Error ------------------------------------------------------------------------------------------------------ 1/f.js:3:27

Cannot perform arithmetic operation because null [1] is not a number. [unsafe-addition]

   1/f.js:3:27
   3| function f(x) { return 42/x; }
                                ^

References:
   1/f.js:5:9
   5| var x = null;
              ^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ 2/A.js:5:15

Missing type annotation for `x`. [missing-annot]

   5|   constructor(x) { this.x = x; }
                    ^


Error ------------------------------------------------------------------------------------------------------ 2/A.js:9:10

Missing type annotation for `callback`. [missing-annot]

   9|   onLoad(callback) {
               ^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- 2/A.js:10:21

Cannot call `callback` with `this.getX()` bound to `x` because number [1] is incompatible with string [2].
[incompatible-call]

   2/A.js:10:21
   10|     return callback(this.getX());
                           ^^^^^^^^^^^

References:
   2/A.js:4:6
    4|   x: number; // instance field declaration
            ^^^^^^ [1]
   2/A.js:14:22
   14| function callback(x: string) { return x.length; }
                            ^^^^^^ [2]



Found 4 errors
